# MLIR-Sample-Pass

./: CMakeLists.txt  ReadMe.md
src/sample/Transforms/: CMakeLists.txt  MatmulOptPass.cpp  Passes.h  Passes.h.inc  Passes.td  SampleConvertFunctionPass.cpp  SampleTypeCheckPass.cpp
test/: func.mlir  invalid.mlir  valid.mlir
tools/: CMakeLists.txt  mlir-opt.cpp
